--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <title>Govind Ramesh</title>
     <style>
-        .title {
+        .title a {
+        	display: block;
             font-size:40px;
+            margin-left:10px;
             color:black;
             font-weight:bold;
             text-align: left;
+            text-decoration: none;
         }
-        .subtitle {
+        .subtitle a {
+        	display: block;
             font-size:17px;
             margin-left:10px;
-            margin-bottom:15px;
+            margin-bottom:10px;
             text-align: left;
+            text-decoration: none;
         }
         body {
             margin: 0 auto;
@@ -59,14 +64,14 @@
 
     <!-- Header Section -->
     <header>
-        <div class = "title">Govind Ramesh</title>
-        <div class="subtitle">GitHub Page for Programming Projects</div>
+        <div class = "title"><a href="https://govindramesh.github.io">Govind Ramesh</a></title>
+        <div class="subtitle"><a href="https://govindramesh.github.io">GitHub Page for Programming Projects</a></div>
     </header>
 
     <!-- Menu Navigation Bar -->
     <div class="menu">
         <a href="https://govindramesh.github.io">HOME</a>
-        <a href="">PD-3DCNN</a>
+        <a href="https://govindramesh.github.io/PD-3DCNN/">PD-3DCNN</a>
         <a href="https://govindramesh.github.io/PoliceBrutality/">Police Brutality</a>
     </div>
 
