--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             display: block;
             font-size:40px;
             padding: 10px 0px 0px 10px;
-	    background-color: blue;
+	    background-color: yellow;
             color:black;
             font-weight:bold;
             text-align: left;
@@ -78,7 +78,7 @@
     <div class = "body_sec">
         <section id="Content">
             <h3>Content section</h3>
-	    <object width="400" height="500" type="application/pdf" data="/Users/govindramesh/Downloads/Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
+	    <object width="400" height="500" type="application/pdf" data="\Users\govindramesh\Downloads\Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
             <p>Insert your error message here, if the PDF cannot be displayed.</p>
 	    </object>
         </section>
