--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section id="Content">
             <h3>Content section</h3>
 	    <a target="_blank" rel="noopener noreferrer" href="Research Paper.pdf">Link to pdf</a>
-	    <object width=100% height="100" type="application/pdf" data="Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0"></object>
+	    <object position=center width=50% height="500" type="application/pdf" data="Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0"></object>
         </section>
     </div>
 
