--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             display: block;
             font-size:40px;
             padding: 10px 0px 0px 10px;
-	    background-color: yellow;
+	    background-color: blue;
             color:black;
             font-weight:bold;
             text-align: left;
@@ -79,7 +79,7 @@
         <section id="Content">
             <h3>Content section</h3>
 	    <a target="_blank" rel="noopener noreferrer" href="Research Paper.pdf">Link to pdf</a>
-	    <object margin:auto width=50% height="500" type="application/pdf" data="Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0"></object>
+		<object <style>margin:auto</style> width=50% height="500" type="application/pdf" data="Research Paper.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0"></object>
         </section>
     </div>
 
