--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             display: block;
             font-size:40px;
             padding: 10px 0px 0px 10px;
-	    background-color: blue;
+	    background-color: green;
             color:black;
             font-weight:bold;
             text-align: left;
