Added dropdown menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             display: block;
             font-size:40px;
             padding: 10px 0px 0px 100px;
-	    background-color: grey;
+	          background-color: grey;
             color:black;
             font-weight:bold;
             text-align: left;
@@ -31,20 +31,54 @@
             position: sticky;
             top: 0;
             background-color: black;
-            padding:10px 0px 10px 84px;
+            padding:0px 0px 0px 84px;
             color:white;
-            margin: 0 auto;
-            overflow: hidden;
         }
         .menu a {
+            display:inline-block;
+            font-size: 20px;
             color: white;
             text-align: center;
-            padding: 14px 16px;
+            padding: 10px 16px;
             text-decoration: none;
-            font-size: 20px;
         }
-        .menu a:hover {
+        .dropdown {
+            display:inline-block;
+        }
+        .dropdown .dropbtn {
+            font-size: 20px;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 10px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+        }
+        .menu a:hover, .dropdown:hover .dropbtn {
             background-color: #595959;
+        }
+        .dropdown-content {
+            display: none;
+            position:absolute;
+            background-color: black;
+            width: fit-content;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+        .dropdown-content a {
+            float: none;
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+        .dropdown-content a:hover {
+            background-color: #909090;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block ;
         }
         footer {
             width: 100%;
@@ -82,7 +116,13 @@
     <!-- Menu Navigation Bar -->
     <div class="menu">
         <a href="https://govindramesh.github.io">HOME</a>
-        <a href="https://govindramesh.github.io/PD-3DCNN/">PD-3DCNN</a>
+        <div class="dropdown">
+            <a class="dropbtn">PD-3DCNN</a>
+            <div class="dropdown-content">
+                <a target="_blank" rel="noopener noreferrer" href="Research Paper.pdf">Research Paper</a>
+                <a href="https://govindramesh.github.io/PD-3DCNN/">3D CNN Tutorial</a>
+            </div>
+        </div>
         <a href="https://govindramesh.github.io/PoliceBrutality/">Police Brutality</a>
     </div>
 
@@ -92,8 +132,7 @@
       <p style="font-size:19px"><i>In this post, we will be going over what a 3D Convolutional Neural Network is, how it works, and how to implement one using Keras.
       </i></p1>
       <section id="Contents">
-           <br><a target="_blank" rel="noopener noreferrer" href="Research Paper.pdf">Link to pdf of original paper</a><br>
-           <p><span style="font-size:18px; font-weight:bold;">Sections:</span>
+           <p><br><span style="font-size:18px; font-weight:bold;">Sections:</span>
            <br><a href="#sec1">What is a Convolutional Neural Network?</a>
            <br><a style="" href="#sec2">Convolutional Neural Network Architecture</a>
            <br></p>
