--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <a href="https://govindramesh.github.io/PD-3DCNN/">3D CNN Tutorial</a>
             </div>
         </div>
-        <a href="https://govindramesh.github.io/PoliceBrutality/">Police Brutality</a>
+        <a href="https://govindramesh.github.io/PoliceViolence/">Police Violence</a>
     </div>
 
     <!-- Body section -->
