--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             </div>
         </div>
         <a href="https://govindramesh.github.io/PoliceViolence/">Police Violence</a>
+        <a href="https://govindramesh.github.io/TrafficSim/">Traffic Simulation</a>
     </div>
 
     <!-- Body section -->
